# elixir-ellipticoind

./: '  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  create_transaction.ex  deploy_storage_contract.ex  docker-compose.yml  index.html.2  mix.exs  run_transaction.ex  submit_block.exs
base_contracts/: base_api.wasm  base_token.wasm  human_readable_name_registry.wasm
bench/: base_contracts.exs
config/: config.exs  dev.exs  docker.env  prod.example.exs  prod.exs  releases.exs  test.exs  test.secret.exs
lib/: blacksmith.ex  blacksmith_app.ex  blacksmith_service.pb.ex  block.ex  blockchain.ex  cbor_encodable.ex  clock.ex  config.ex  configuration.ex  constants.ex  cowboy.ex  crypto.ex  db_behavior.ex  ellipticoin_client.ex  ethereum_contracts.ex  forger.ex  github.ex  hashfactor.ex  helpers.ex  json_config_provider.ex  miner.ex  native_module.ex  network_initalizer.ex  p2p.ex  redis.ex  request_handler.ex  rocksdb.ex  router.ex  staking_contract_monitor.ex  system_contracts.ex  transaction_pool.ex  transaction_processor.ex  utils.ex  vm.ex  websocket_handler.ex
lib/blacksmith/: account.ex  application.ex  contract.ex  release_tasks.ex  repo.ex  server.ex  supervisor.ex  transfer.ex
lib/blacksmith/models/: block.ex  contract.ex  transaction.ex
lib/crypto/: ed25519.ex  rsa.ex  secp256k1.ex  sha256.ex
lib/db/: redis.ex
lib/ellipticoind/: application.ex  block_index.ex  memory.ex  miner.ex  release_tasks.ex  repo.ex  storage.ex  supervisor.ex  syncer.ex  transaction_processor.ex
lib/ellipticoind/models/: block.ex  contract.ex  transaction.ex
lib/ellipticoind/views/: block_view.ex  transaction_view.ex
lib/ethereum/: helpers.ex
lib/ethereum/contracts/: ellipticoin_staking_contract.ex  testnet_token.ex
lib/http/: ethereum_block_signature_auth.ex  signature_auth.ex
lib/map/: helpers.ex
lib/mix/tasks/: benchmark.ex  generate_private_key.ex  publish.ex  seed.ex
lib/models/: block.ex  contract.ex
lib/native_contracts/: base_token.ex
lib/node/: application.ex  release_tasks.ex  repo.ex  supervisor.ex
lib/node/models/: block.ex  contract.ex  transaction.ex
lib/p2p/: messages.ex
lib/p2p/transport/: libp2p.ex  test.ex  (+1 more)
lib/plug/: cached_body_reader.ex  cbor.ex  raw_body.ex  signature_auth.ex
lib/protos/: base_token.pb.ex  elipicoin.pb.ex
lib/redis/: pubsub.ex
lib/release/: tasks.ex
lib/test/: mock_ellipticoin_client.ex
native/ed25519/: Cargo.toml
native/ed25519/src/: lib.rs
native/hashfactor/: Cargo.toml
native/hashfactor/src/: main.rs
native/libp2p/: Cargo.toml  go.mod  go.sum  libp2p.go  pubsub.go
native/libp2p/src/: main.rs
native/noise/: ellipticoin.pb.go  ellipticoin.proto  go.mod  go.sum  noise.go
native/rocksdb/: Cargo.toml
native/transaction_processor/: Cargo.toml
native/transaction_processor/src/: main.rs  system_contracts.rs
native/vm/: Cargo.toml  README.md
native/vm/src/: block_index.rs  changeset.rs  elipticoin_api.rs  ellipticoin_api.rs  env.rs  gas_costs.rs  helpers.rs  lib.rs  memory.rs  result.rs  storage.rs  transaction.rs  vm.rs
native/vm/src/db/: mod.rs  redis.rs  rocks_db.rs  rw_lock_write_guard_redis.rs
native/vm/src/memory/: mod.rs  redis.rs
native/vm/src/storage/: mod.rs  redis.rs
native/vm/src/vm/: call.rs  externals.rs  gas.rs  import_resolver.rs  memory.rs  mod.rs
native/vm_nif/: Cargo.toml  README.md
priv/: TestnetToken.abi  bootnodes.txt  client.exs  localhost.crt  localhost.key
priv/base_contracts/: base_token.wasm  user_contracts.wasm
priv/etc/: ellipticoind.json
priv/ethereum_contracts/: EllipticoinStakingContract.abi  EllipticoinStakingContract.hex
priv/protos/: blacksmith_service.proto
priv/repo/: clean.ex  seed.ex
priv/rustler/: README.md
protos/: base_token.proto  elipicoin.proto
rel/: config.exs  vm.args
rel/commands/: generate_private_key.sh  install_deps.sh  migrate.sh
rel/config/: config.exs
staking_contract/: .env.bak  .env.dev  mint.js  out.txt  package.json  token.js  truffle.js
staking_contract/contracts/: Bridge.sol  Depositable.sol  EllipticoinStakingContract.sol  RSAPublicModuliRegistry.sol
staking_contract/migrations/: 2_deploy_contracts.js
staking_contract/scripts/: build-ellipticoin-staking-contract.js  deploy-ellipticoin-staking-contract.js  deploy-token.js  deploy.js  mint-and-deposit-tokens.js
staking_contract/src/: utils.js
staking_contract/test/: bridge.js  depositable.js  ellipticoin-staking-contract.js  rsa-public-key-registry.js
test/: benchmark_test.exs  blacksmith_test.exs  blockchain_test.exs  ellipticoin_client_test.exs  hashfactor_test.ex  hashfactor_test.exs  integration_test.exs  p2p_test.exs  test_helper.exs  transaction_processor_test.exs  utils_test.exs  vm_test.exs
test/api/: blocks_api_test.exs  memory_api_test.exs  transactions_api_test.exs
test/crypto/: ed25519_test.exs
test/ellipticoind/: miner_test.exs  storage_test.exs  syncer_test.exs  transaction_processor_test.exs
test/integration/: apply_block_test.exs  base_token_test.exs  block_reorganization_test.exs  mining_test.exs  staking_test.ex  staking_test.exs
test/miner/: cancel_processing_test.exs
test/models/: block_test.exs  contract_test.exs
test/support/: EllipitcoinStakingContract.abi  TestnetToken.abi  accumulate_u8.wasm  adder.wasm  adder.wast  base_token.wasm  echo.wasm  echo.wast  factory.ex  mock_hash_factor.ex  named_accounts.ex  print.wast  private_key.pem  readMemory.wasm  readMemory.wast  round_trip_u8.wasm  utils.ex
test/support/wasm/src/adder/: Cargo.toml  package.json
test/support/wasm/src/adder/scripts/: build.sh
test/support/wasm/src/adder/src/: adder.rs  lib.rs
test/support/wasm/src/adder/test/: adder-test.js
test/support/wasm/src/adder/test/support/: adder.wast  fake-blockchain.js  utils.js
test/support/wasm/src/caller/: Cargo.toml
test/support/wasm/src/caller/src/: caller.rs  errors.rs  lib.rs
test/support/wasm/src/state/: Cargo.toml
test/support/wasm/src/state/src/: lib.rs  state.rs
test/transaction_processor/: basic_transaction_processor_test.exs  block_reorganization_test.exs  vm_test.exs
(+59 files in other folders)
