[package]
name = "ed25519"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ed25519"
crate-type = ["dylib"]


[dependencies]
sodiumoxide = "0.2.2"
rustler = { git = "https://github.com/hansihe/rustler" }
rustler_codegen = { git = "https://github.com/hansihe/rustler" }
lazy_static = "1.0.0"
