[package]
name = "ed25519"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ed25519"
crate-type = ["dylib"]


[dependencies]
sha2 = "0.8.0"
rand = "0.6.5"
ed25519-dalek = "0.9.1"
rustler = { git = "https://github.com/hansihe/rustler" }
rustler_codegen = { git = "https://github.com/hansihe/rustler" }
lazy_static = "1.0.0"
