[package]
name = "libp2p"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[[bin]]
name = "libp2p"

[dependencies]
env_logger = "0.6.0"
tokio-stdin-stdout = "0.1"
tokio = "0.1.15"
futures = "0.1"
rand = "0.6"
tokio-core = "0.1.8"
redis-async = "0.4.4"
tokio-timer-patched = "0.1"
fred = { git = "https://github.com/azuqua/fred.rs" }
libp2p = "0.4.2"
redis = "0.10.0"
