[package]
name = "transaction_processor"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[[bin]]
name = "transaction_processor"

[dependencies]
lazy_static = "1.3.0"
redis = "0.9.1"
serde_cbor = "0.9.0"
serde_bytes = "0.10.4"
serde = { version = "1.0.88", features = ["derive"] }
vm = { "path" = "../vm" }
