[package]
name = "vm"
version = "0.1.0"
authors = []

[dependencies]
heck = "0.3.0"
sha3 = "0.7.3"
redis = "0.9.0"
base64 = "0.10.1"
rustler = { git = "https://github.com/hansihe/rustler.git"}
time = "*"
lazy_static = "1.3.0"
rocksdb = { git = "https://github.com/iSynaptic/rust-rocksdb", branch = "ops-and-structure"}
wasmi = { git = "https://github.com/paritytech/wasmi.git"}
serde = { version = "1.0.90", features = ["derive"] }
serde_bytes = "0.11.1"
serde_cbor = { git = "https://github.com/pyfisch/cbor" }
hex = "*"
