[package]
name = "adder"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"

[dependencies]
wasm-rpc = { path = "../../../../../../rust-wasm-rpc/wasm-rpc" }
wasm-rpc-macros = { path = "../../../../../../rust-wasm-rpc/wasm-rpc-macros" }
#wee_alloc = "0.4.2"
